<resources>
    <string name="app_name">FoodApp</string>

    <string name="size">Size</string>

    <string name="tortilla">Tortilla</string>

    <string name="fillings">Fillings</string>

    <string name="beverage">Beverage</string>

    <string name="place_your_order">Place Your Order</string>

    <string-array name="ArrSize">
        <item>Size</item>
        <item>Large</item>
        <item>Medium</item>
        <item>Small</item>
    </string-array>

    <string-array name="ArrTortilla">
        <item>Tortilla</item>
        <item>Corn</item>
        <item>Flour</item>
    </string-array>

    <string-array name="ArrBeverage">
        <item>Beverage</item>
        <item>Soda</item>
        <item>Margarita</item>
        <item>Cerveza</item>
        <item>Tequila</item>
    </string-array>

    <string-array name="ArrFillings">
        <item>Fillings</item>
        <!--        <item>Pico de Gallo</item>-->
        <item>Rice</item>
        <item>Chicken</item>
        <item>Guacamloe</item>
        <item>Beans</item>
        <item>Cheese</item>
        <item>White Fish</item>
        <item>LBT</item>
        <item>Beef</item>
        <item>Sea Food</item>
    </string-array>

</resources>